# pydtk

./: .buildinfo  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  OWNERS  README.md  docker-compose.yml  docker-entrypoint.sh  genindex.html  index.html  install-pydtk.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_and_deploy_document.yaml  build_and_publish_images.yml  build_and_push_docker_images.yml  ci.yaml  on_release.yaml  update_openapi_specification.yaml
CLI/: 01_overview.html  02_db_operations.html  03_model_operations.html  04_io_operations.html
_sources/: index.rst.txt
_sources/examples/: 01_grab_metadata.ipynb.txt  02_grab_data_based_on_metadata.ipynb.txt  04_prepare_dataset_and_train.ipynb.txt
_sources/modules/: dwtk.builder.dbdb.rst.txt  dwtk.builder.rst.txt  dwtk.db.rst.txt  dwtk.db.v1.handlers.rst.txt  dwtk.db.v1.rst.txt  dwtk.db.v2.handlers.rst.txt  dwtk.db.v2.rst.txt  dwtk.db.v2.search_engines.rst.txt  dwtk.db.v3.handlers.rst.txt  dwtk.db.v3.rst.txt  dwtk.db.v3.search_engines.rst.txt  dwtk.io.rst.txt  dwtk.models.autoware.rst.txt  dwtk.models.rst.txt  dwtk.preprocesses.rst.txt  dwtk.rst.txt  dwtk.statistics.rst.txt  dwtk.utils.rst.txt  modules.rst.txt  pydtk.bin.rst.txt  pydtk.bin.sub_commands.rst.txt  pydtk.builder.dbdb.rst.txt  pydtk.builder.rst.txt  pydtk.db.rst.txt  pydtk.db.schemas.dataware-tools.com.rst.txt  pydtk.db.schemas.dataware-tools.com.v1alpha1.rst.txt  pydtk.db.schemas.dataware-tools.com.v1alpha2.rst.txt  pydtk.db.schemas.dataware-tools.com.v1alpha3.rst.txt  pydtk.db.schemas.dataware-tools.com.v1alpha4.rst.txt  pydtk.db.schemas.dataware-tools.com.v1alpha5.rst.txt  pydtk.db.schemas.rst.txt  pydtk.db.v1.handlers.rst.txt  pydtk.db.v1.rst.txt  pydtk.db.v2.handlers.rst.txt  pydtk.db.v2.rst.txt  pydtk.db.v2.search_engines.rst.txt  pydtk.db.v3.handlers.rst.txt  pydtk.db.v3.rst.txt  pydtk.db.v3.search_engines.rst.txt  pydtk.db.v4.deps.rst.txt  (+12 more)
_sources/quickstart/: 01_try_pydtk.rst.txt  02_create_metadata.rst.txt
_static/: documentation_options.js
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/CLI/: 01_overview.rst  02_db_operations.rst  03_model_operations.rst  04_io_operations.rst
doc/source/_templates/: layout.html
docker/: targets.txt
docker/base/: ubuntu-18.04-ros.Dockerfile  ubuntu-18.04.Dockerfile  ubuntu-20.04-ros.Dockerfile  ubuntu-20.04-ros2.Dockerfile  ubuntu-20.04.Dockerfile  ubuntu-22.04-ros2.Dockerfile
docker/dev/: ubuntu-18.04.Dockerfile  ubuntu-ros.Dockerfile  ubuntu-ros2.Dockerfile  ubuntu.Dockerfile
docker/runtime/: ubuntu-20.04-ros.Dockerfile  ubuntu-20.04-ros2.Dockerfile  ubuntu-ros.Dockerfile  ubuntu-ros2.Dockerfile  ubuntu.Dockerfile
dwtk/: __init__.py  frontend.py
dwtk/builder/: df_list.py  meta_db.py  statistic_db.py
dwtk/builder/dbdb/: __init__.py  (+1 more)
dwtk/conf/: v3.yaml
dwtk/io/: __init__.py  reader.py
dwtk/models/: __init__.py  csv.py  movie.py  rosbag.py
dwtk/preprocesses/: preprocess.py
dwtk/statistics/: __init__.py
dwtk/utils/: can_decoder.py  fileutils.py  utils.py
examples/: .gitignore  01_grab_metadata.html  01_grab_metadata.ipynb  02_grab_data_based_on_metadata.html  02_grab_data_based_on_metadata.ipynb  03_extract_and_dump_image_data.html  03_extract_and_dump_image_data.ipynb  03_save_data.html  03_save_data.ipynb  04_prepare_dataset_and_train.html  04_prepare_dataset_and_train.ipynb  05_save_data.html  05_save_data.ipynb  example.db
examples/example_db/: default.json
modules/: dwtk.builder.dbdb.html  dwtk.builder.html  dwtk.db.html  dwtk.db.v1.handlers.html  dwtk.db.v1.html  dwtk.db.v2.handlers.html  dwtk.db.v2.html  dwtk.db.v2.search_engines.html  dwtk.db.v3.handlers.html  dwtk.db.v3.html  dwtk.db.v3.search_engines.html  dwtk.html  dwtk.io.html  dwtk.models.autoware.html  dwtk.models.html  dwtk.preprocesses.html  dwtk.statistics.html  dwtk.utils.html  modules.html  pydtk.bin.html  pydtk.bin.sub_commands.html  pydtk.builder.dbdb.html  pydtk.builder.html  pydtk.db.html  pydtk.db.schemas.dataware-tools.com.html  pydtk.db.schemas.dataware-tools.com.v1alpha1.html  pydtk.db.schemas.dataware-tools.com.v1alpha2.html  pydtk.db.schemas.dataware-tools.com.v1alpha3.html  pydtk.db.schemas.dataware-tools.com.v1alpha4.html  pydtk.db.schemas.dataware-tools.com.v1alpha5.html  pydtk.db.schemas.html  pydtk.db.v1.handlers.html  pydtk.db.v1.html  pydtk.db.v2.handlers.html  pydtk.db.v2.html  pydtk.db.v2.search_engines.html  pydtk.db.v3.handlers.html  pydtk.db.v3.html  pydtk.db.v3.search_engines.html  pydtk.db.v4.deps.html  (+12 more)
pydtk/: __init__.py  frontend.py
pydtk/builder/: concat_df.py  df_list.py  df_path.py  meta_db.py  statistic_db.py
pydtk/conf/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
pydtk/db/: __init__.py  exceptions.py
pydtk/io/: __init__.py  errors.py  reader.py  writer.py
pydtk/models/: __init__.py  csv.py  image.py  json_model.py  movie.py  rosbag.py  rosbag2.py
pydtk/preprocesses/: __init__.py  downsampling.py  passthrough.py
pydtk/statistics/: __init__.py  calculator.py
pydtk/utils/: __init__.py  can_decoder.py  fileutils.py  imports.py  utils.py
quickstart/: 01_try_pydtk.html  02_create_metadata.html
scripts/: build-image.sh  get-version.sh  publish-image.sh
scripts/dbdb/: add_statistic_db.sh  make_file_info.sh  make_index_pickle.sh  make_meta_db.sh
scripts/meti/: check_bag.py  meta_json.py  template.json
scripts/meti2019/: meta_json.py  template.json
scripts/nedo2019/: make_meta_db.sh  meta_json.py  sample.json  template.json
test/: .gitignore  _test_db_v3.py  _test_vaex.py  test_annotations.py  test_cli.py  test_db.py  test_db_v4.py  test_dummy.py  test_dwtk.py  test_io.py  test_make_meta.py  test_models.py  test_pydtk.py  test_statistics.db  test_statistics.py  test_utils.py  test_v3.db  test_v3_env.db
test/annotations/: annotation_commented_image_pixel.json  annotation_commented_image_rectangular_area.json  annotation_commented_point.json
test/assets/: .gitignore  can_assign_list.csv
(+129 files in other folders)
