[build-system]
requires = ["poetry >= 1.0.0", "setuptools >= 50.3.0", "wheel >= 0.35.1", "pip >= 21.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pydtk"
version = "0.2.2-2"
description = "A Python toolkit for managing, retrieving and processing data."
license = "Apache-2.0"
authors = [
    "Yusuke Adachi <adachi.yusuke@hdwlab.co.jp>",
    "Daiki Hayashi <hayashi.daiki@hdwlab.co.jp>",
    "Toshimitsu Watanabe <watanabe.toshimitsu@hdwlab.co.jp>"
]
readme = 'README.md'
repository = "https://github.com/dataware-tools/python-toolkit.git"
homepage = "https://github.com/dataware-tools/python-toolkit.git"
keywords = ['toolkit', 'data', 'dataware', 'metadata']
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "<1.24.0"
pandas = "^1.0.3"
six = "^1.15.0"
pyyaml = "*"
pycryptodomex = { version = "*", optional = true }
gnupg = { version = "*", optional = true }
rospkg = { version = "*", optional = true }
pyntcloud = { version = "*", optional = true }
tqdm = "^4.46.1"
fire = "^0.3.1"
sqlalchemy = "^1.3.17"
sqlalchemy-migrate = "*"
opencv-python = "^4.2.0.34"
bitstring = "^3.1.7"
tinydb = ">=3.2.1,<4.0.0"
pymongo = "^3.11.3"
deepmerge = "^0.1.1"
tinymongo = "^0.2.0"
flatten-dict = "^0.3.0"
python-dateutil = "^2.8.1"
montydb = {extras = ["bson", "lmdb"], version = "^2.4.0"}
flatdict = { version = "^4.0.1", optional = true }
pyzstd = { version = "^0.15.0", optional = true }
pydantic = "^1.10.2"
lark =  { version = "^1.1.5", optional = true }
scipy = "^1.8.0"
addict = "^2.4.0"
iso8601 = "^1.1.0"

[tool.poetry.dev-dependencies]
importlib-resources = "<2.0.0"
importlib-metadata = "<2.0.0"
pytest = "^6.0.0"
flake8-docstrings = "^1.5.0"
tox = "<=3.17.0"
jupyter = "^1.0.0"
notebook = "^6.0.3"
sphinx = "^3.1.1"
black = "^22.8.0"
pyproject-flake8 = "^5.0.4"

[tool.poetry.extras]
ros = ["pycryptodomex", "gnupg", "rospkg", "flatdict"]
ros2 = ["lark", "flatdict"]
pointcloud = ["pyntcloud", "pypcd"]
zstd = ["pyzstd"]

[tool.poetry.scripts]
create_meta_db = "pydtk.builder.meta_db:script"
analyze_statistics = "pydtk.builder.statistic_db:script"
batch_analyze_statistics = "pydtk.builder.statistic_db:batch_script"
make_meta = "pydtk.bin.make_meta:main"
pydtk = "pydtk.bin.cli:script"
oas_dump = "pydtk.bin.oas:script"

[tool.pytest.ini_options]
markers = ["extra", "ros", "ros2", "cassandra", "pointcloud", "zstd"]

# NOTE(kan-bayashi): black does not support tox.ini
[tool.black]
line-length = 100
extend-exclude = '''
/(
  | .venv
  | .pytest_cache
  | openapi
)/
'''
